A lot of fix and polish in CSS: Several Safari fix, Japanese font, transition, spacing...

--- a/src/custom.css
+++ b/src/custom.css
@@ -1,7 +1,7 @@
 /* Typography and Color Scheme */
 :root {
-    --nc-font-sans: Inter, 'Noto Sans JP', sans-serif;
-    --nc-font-mono: 'Fira Code', monospace;
+    --nc-font-sans: Inter, "Yu Gothic Medium", sans-serif;
+    --nc-font-mono: "Fira Code", monospace;
     /* Nord color scheme */
     /* Light */
     --nc-tx-1: #2e3440;
@@ -41,13 +41,14 @@
 }
 
 body {
-    line-height: 1.75;
+    line-height: 1.8;
     font-feature-settings: "palt";
+    font-weight: 400;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    line-height: 1.20;
-    font-family: 'Montserrat', 'Noto Sans JP', sans-serif;
+    line-height: 1.2;
+    font-family: Montserrat, "Yu Gothic", sans-serif;
     font-weight: 700;
     border: 0;
 }
@@ -57,28 +58,39 @@ code {
     font-feature-settings: "palt" 0 !important;
 }
 
+/* Link */
+a {
+    transition: color .25s;
+    text-underline-offset: 0.2rem;
+    text-decoration-thickness: 1px;
+}
+
 /* Header */
 header {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+    padding: 1rem 0;
     text-align: center;
 }
 
 header a {
     color: var(--nc-tx-1);
-    text-decoration: none;
+    text-decoration-style: solid;
+    text-decoration-color: transparent;
+    transition: text-decoration-color .25s;
 }
 
 header a:hover {
     color: var(--nc-tx-1);
-    text-decoration: underline;
+    text-decoration-color: var(--nc-tx-1);
 }
 
 /* Article */
 .cover {
     width: 100%;
-    border-radius: 15px;
     margin-bottom: 0.5rem;
+}
+
+.cover img {
+    border-radius: 20px;
 }
 
 /* Article List */
@@ -94,7 +106,7 @@ header a:hover {
     margin: 4rem 0;
     background: var(--nc-bg-2);
     border: 1px solid var(--nc-bg-3);
-    border-radius: 15px;
+    border-radius: 20px;
     padding: 2rem 1rem;
 }
 
@@ -121,3 +133,18 @@ header a:hover {
         max-width: 25rem;
     }
 }
+
+/* Transition */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+main, .bio {
+    animation: fadeIn 0.5s ease 0s 1 normal;
+}
+
